--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css"/>
     <script src="calculator.js" defer></script>
-    <title>Document</title>
+    <title>Calk-U-Later</title>
 </head>
 <body>
     <div class="container"></div>
